--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><i class="fa-solid fa-gear"></i> Services</li>
                 <li><i class="fa-solid fa-users"></i> Team</li>
             </ul>
+            <i class="fa-solid fa-bars" onclick="sideBar()"></i>
         </div>
         <div class="nav-text">
             <h2>Discover Web Template</h2>
@@ -29,6 +30,13 @@
             <button>Learn More About Us</button>
         </div>
         <div class="slant"></div>
+        <div class="sidebar vert-center" style="align-items: flex-start;" id="sidebar">
+            <i class="fa-solid fa-xmark" style="font-size: 40px; margin:10px 20px;" onclick="sideBar()"></i>
+            <div class="hori-center"><i class="fa-solid fa-house"></i> Home</div>
+            <div class="hori-center"><i class="fa-solid fa-user"></i> About</div>
+            <div class="hori-center"><i class="fa-solid fa-gear"></i> Services</div>
+            <div class="hori-center"><i class="fa-solid fa-users"></i> Team</div>
+        </div>
     </nav>
     <div class="about">
         <h1><span style="color: #ff6600;">ABOUT</span> <span style="color: #242424;">US</span></h1>
@@ -61,12 +69,12 @@
     </div>
     <div class="manager">
         <img src="Images/4.jpg" alt="">
-        <div class="manager-content hori-center">
+        <div class="manager-content hori-center" style="justify-content: space-between;">
             <img src="Images/3.jpg" alt="">
             <div class="manager-info">
                 <h1 style="color:#fff;">PROJECT MANAGER</h1>
                 <h3 style="color: #ff6600;margin:20px;">JESSICA ALBERTO</h3>
-                <p style="border-left: 3px solid #ff6600;padding-left:50px;max-width:500px;color:#fff;">"Lorem ipsum,
+                <p style="border-left: 3px solid #ff6600;padding-left:50px;max-width:200px;color:#fff;">"Lorem ipsum,
                     dolor sit amet consectetur adipisicing elit. Hic, rem ratione impedit labore porro praesentium?
                     Reiciendis atque nihil earum cupiditate debitis rerum ipsa doloribus provident sapiente distinctio
                     accusantium deleniti architecto, aliquid optio qui modi! Ab explicabo laboriosam enim deserunt sed
@@ -92,29 +100,29 @@
         </div>
         <div class="hori-center">
             <div class="card vert-center">
-                <i class="fa-solid fa-leaf" style="font-size: 40px;"></i>
+                <i class="fa-solid fa-leaf" ></i>
                 <h3 style="margin-top:20px;">Creative Solutions</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-anchor" style="font-size: 40px;"></i>
+                <i class="fa-solid fa-anchor" ></i>
                 <h3 style="margin-top:20px;">Featured Services</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-globe" style="font-size: 40px;"></i>
+                <i class="fa-solid fa-globe" ></i>
                 <h3 style="margin-top:20px;">Custom Designs</h3>
             </div>
         </div>
         <div class="hori-center">
             <div class="card vert-center">
-                <i class="fa-solid fa-comments" style="font-size: 40px;"></i>
+                <i class="fa-solid fa-comments" ></i>
                 <h3 style="margin-top:20px;">Technical Support</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-gears" style="font-size: 40px;"></i>
+                <i class="fa-solid fa-gears" ></i>
                 <h3 style="margin-top:20px;">Responsive Design</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-file-code" style="font-size: 40px;"></i>
+                <i class="fa-solid fa-file-code" ></i>
                 <h3 style="margin-top:20px;">Web Documented</h3>
             </div>
         </div>
@@ -126,7 +134,7 @@
             <p style="font-size:15px;color:#999999;">TESTIMONIALS</p>
             <img src="Images/5.jpg" alt="" >
             <div>
-                <p style="max-width: 700px;"><i class="fa-solid fa-quote-left" style="font-size:30px;"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni ab hic dicta architecto officiis saepe in, incidunt eum aliquam debitis natus et, impedit enim sit maiores.<i class="fa-solid fa-quote-right" style="font-size:30px;"></i></p>
+                <p><i class="fa-solid fa-quote-left" style="font-size:30px;"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni ab hic dicta architecto officiis saepe in, incidunt eum aliquam debitis natus et, impedit enim sit maiores.<i class="fa-solid fa-quote-right" style="font-size:30px;"></i></p>
             </div>
             <h1 style="color: #ff6600;font-size:15px;font-weight: 500;margin-top: 20px;">MISS LUCI WALKER</h1>
             <h1 style="color: #fff;font-size:15px;font-weight: 500;margin-bottom:20px;">Project Manager</h1>
@@ -283,7 +291,7 @@
             <h1><span style="color: #ff6600;">OUR</span> <span style="color: #fff;">NEWSLETTER</span></h1>
             <p style="font-size:10px;color:#999;">KEEP IN TOUCH</p>
             <h4>Sign Up Now! Tell us how can we be helpful to you.</h4>
-            <div class="inputBar">
+            <div class="inputBar vert-center">
                 <input type="email" placeholder="Enter Your E-Mail">
                 <i class="fa-solid fa-envelope"></i>
             </div>
@@ -324,7 +332,7 @@
         <div class="content vert-center">
             <h1><span style="color: #ff6600;">VIDEO</span> <span style="color: #fff;">PROMO</span></h1>
             <p style="font-size:10px;color:#999;">MADE WITH LOVE FOR YOU</p>
-            <h3 style="color: #fff;margin:30px 0;max-width:650px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae minus error.</h3>
+            <h3 style="color: #fff;margin:30px 0;max-width:600px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae minus error.</h3>
             <i class="fa-solid fa-play"></i>
         </div>
         <div class="slant2"></div>
@@ -412,5 +420,19 @@
         <div class="slant2"></div>
     </div>
 </body>
-
+<script>
+var sidebarOpen = false;
+var sidebar = document.getElementById("sidebar");
+function sideBar(){
+    if(sidebarOpen === false){
+        sidebar.style.left = "50%";
+        sidebarOpen = true;
+        console.log("Opened");
+    }else{
+        sidebar.style.left = "100%";
+        sidebarOpen = false;
+        console.log("Closed");
+    }
+}
+</script>
 </html>
