--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         </div>
         <div class="slant"></div>
         <div class="sidebar vert-center" style="align-items: flex-start;" id="sidebar">
-            <i class="fa-solid fa-xmark" style="font-size: 40px; margin:10px 20px;" onclick="sideBar()"></i>
+            <i class="fa-solid fa-xmark" style="font-size: 40px; margin:10px 20px;float: right;"
+                onclick="sideBar()"></i>
             <div class="hori-center"><i class="fa-solid fa-house"></i> Home</div>
             <div class="hori-center"><i class="fa-solid fa-user"></i> About</div>
             <div class="hori-center"><i class="fa-solid fa-gear"></i> Services</div>
@@ -69,12 +70,12 @@
     </div>
     <div class="manager">
         <img src="Images/4.jpg" alt="">
-        <div class="manager-content hori-center" style="justify-content: space-between;">
+        <div class="manager-content hori-center">
             <img src="Images/3.jpg" alt="">
             <div class="manager-info">
                 <h1 style="color:#fff;">PROJECT MANAGER</h1>
                 <h3 style="color: #ff6600;margin:20px;">JESSICA ALBERTO</h3>
-                <p style="border-left: 3px solid #ff6600;padding-left:50px;max-width:200px;color:#fff;">"Lorem ipsum,
+                <p style="border-left: 3px solid #ff6600;padding-left:50px;max-width:400px;color:#fff;">"Lorem ipsum,
                     dolor sit amet consectetur adipisicing elit. Hic, rem ratione impedit labore porro praesentium?
                     Reiciendis atque nihil earum cupiditate debitis rerum ipsa doloribus provident sapiente distinctio
                     accusantium deleniti architecto, aliquid optio qui modi! Ab explicabo laboriosam enim deserunt sed
@@ -98,43 +99,46 @@
             <i class="fa-solid fa-wrench"></i>
             <hr width="150px">
         </div>
+
         <div class="hori-center">
             <div class="card vert-center">
-                <i class="fa-solid fa-leaf" ></i>
+                <i class="fa-solid fa-leaf"></i>
                 <h3 style="margin-top:20px;">Creative Solutions</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-anchor" ></i>
+                <i class="fa-solid fa-anchor"></i>
                 <h3 style="margin-top:20px;">Featured Services</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-globe" ></i>
+                <i class="fa-solid fa-globe"></i>
                 <h3 style="margin-top:20px;">Custom Designs</h3>
             </div>
-        </div>
-        <div class="hori-center">
             <div class="card vert-center">
-                <i class="fa-solid fa-comments" ></i>
+                <i class="fa-solid fa-comments"></i>
                 <h3 style="margin-top:20px;">Technical Support</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-gears" ></i>
+                <i class="fa-solid fa-gears"></i>
                 <h3 style="margin-top:20px;">Responsive Design</h3>
             </div>
             <div class="card vert-center">
-                <i class="fa-solid fa-file-code" ></i>
+                <i class="fa-solid fa-file-code"></i>
                 <h3 style="margin-top:20px;">Web Documented</h3>
             </div>
         </div>
+
     </div>
     <div class="happy-customers">
         <img src="Images/6.jpg" alt="">
         <div class="content  vert-center">
             <h1><span style="color: #ff6600;">HAPPY</span> <span style="color: #fff;">CUSTOMERS</span></h1>
             <p style="font-size:15px;color:#999999;">TESTIMONIALS</p>
-            <img src="Images/5.jpg" alt="" >
+            <img src="Images/5.jpg" alt="">
             <div>
-                <p><i class="fa-solid fa-quote-left" style="font-size:30px;"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni ab hic dicta architecto officiis saepe in, incidunt eum aliquam debitis natus et, impedit enim sit maiores.<i class="fa-solid fa-quote-right" style="font-size:30px;"></i></p>
+                <p><i class="fa-solid fa-quote-left" style="font-size:30px;"></i>Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Quae magni ab hic dicta architecto officiis saepe in, incidunt eum aliquam debitis
+                    natus et, impedit enim sit maiores.<i class="fa-solid fa-quote-right" style="font-size:30px;"></i>
+                </p>
             </div>
             <h1 style="color: #ff6600;font-size:15px;font-weight: 500;margin-top: 20px;">MISS LUCI WALKER</h1>
             <h1 style="color: #fff;font-size:15px;font-weight: 500;margin-bottom:20px;">Project Manager</h1>
@@ -155,7 +159,7 @@
             <i class="fa-solid fa-images"></i>
             <hr width="150px">
         </div>
-        <div class="hori-center">
+        <div class="media-links hori-center">
             <button>BEST PROJECTS</button>
             <button>IMAGES</button>
             <button>VIDEOS</button>
@@ -165,53 +169,58 @@
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/9.jpg" alt="">
                 <h2>SMALL HOPE</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/10.jpg" alt="">
                 <h2>LIFE OF ANIMALS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/11.jpg" alt="">
                 <h2>SPEED BIKES</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
-        </div>
 
-        <div class="card2 hori-center">
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/12.jpg" alt="">
                 <h2>CREATIVITY</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/13.jpg" alt="">
                 <h2>SOCIALIZING</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/14.jpg" alt="">
                 <h2>ELECTRONICS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
-        </div>
-
-        <div class="card2 hori-center">
+        
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/15.jpg" alt="">
                 <h2>GYM FITNESS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/16.jpg" alt="">
                 <h2>HEALTHY DIETS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/17.jpg" alt="">
                 <h2>HACKING</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
         </div>
     </div>
@@ -254,7 +263,7 @@
             <i class="fa-solid fa-users"></i>
             <hr width="150px">
         </div>
-        <div class="hori-center">
+        <div class="hori-center" style="flex-wrap: wrap;">
             <div class="card3">
                 <img src="Images/20.jpg" alt="">
                 <div class="vert-center">
@@ -312,17 +321,20 @@
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/4.jpg" alt="">
                 <h2>Creative Workplace</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/6.jpg" alt="">
                 <h2>SEO Marketing Tips</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
             <div class="vert-center" style="align-items: flex-start;">
                 <img src="Images/7.jpg" alt="">
                 <h2>How to be a Good Freelancer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem labore temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quasi, aperiam corporis voluptatem
+                    labore temporibus.</p>
             </div>
         </div>
         <button>SEE ALL POSTS</button>
@@ -332,7 +344,8 @@
         <div class="content vert-center">
             <h1><span style="color: #ff6600;">VIDEO</span> <span style="color: #fff;">PROMO</span></h1>
             <p style="font-size:10px;color:#999;">MADE WITH LOVE FOR YOU</p>
-            <h3 style="color: #fff;margin:30px 0;max-width:600px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae minus error.</h3>
+            <h3 style="color: #fff;margin:30px 0;max-width:600px;text-align: center;">Lorem, ipsum dolor sit amet consectetur adipisicing
+                elit. Quibusdam beatae minus error.</h3>
             <i class="fa-solid fa-play"></i>
         </div>
         <div class="slant2"></div>
@@ -347,7 +360,10 @@
             <hr width="150px">
         </div>
         <div class="info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10746.88658889923!2d74.38132242900316!3d31.58375285862081!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39191be37671dcbf%3A0x786a0e2a0b53d6ef!2sShalamar%20Garden!5e0!3m2!1sen!2s!4v1672473591827!5m2!1sen!2s" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10746.88658889923!2d74.38132242900316!3d31.58375285862081!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39191be37671dcbf%3A0x786a0e2a0b53d6ef!2sShalamar%20Garden!5e0!3m2!1sen!2s!4v1672473591827!5m2!1sen!2s"
+                width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="time hori-center" style="justify-content: space-between;">
                 <div class="vert-center" style="align-items: flex-start;">
                     <h1>WORKING HOURS</h1>
@@ -421,18 +437,19 @@
     </div>
 </body>
 <script>
-var sidebarOpen = false;
-var sidebar = document.getElementById("sidebar");
-function sideBar(){
-    if(sidebarOpen === false){
-        sidebar.style.left = "50%";
-        sidebarOpen = true;
-        console.log("Opened");
-    }else{
-        sidebar.style.left = "100%";
-        sidebarOpen = false;
-        console.log("Closed");
+    var sidebarOpen = false;
+    var sidebar = document.getElementById("sidebar");
+    function sideBar() {
+        if (sidebarOpen === false) {
+            sidebar.style.left = "50%";
+            sidebarOpen = true;
+            console.log("Opened");
+        } else {
+            sidebar.style.left = "100%";
+            sidebarOpen = false;
+            console.log("Closed");
+        }
     }
-}
 </script>
+
 </html>
