--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
                 </div>
             </div>
             <textarea placeholder="Message"></textarea>
-            <div class="hori-center" style="justify-content: space-between;">
+            <div class="hori-center emailSection" style="justify-content: space-between;">
                 <div class="inputBar2">
-                    <input type="email" placeholder="E-Mail">
+                    <input type="email" class="emailBar" placeholder="E-Mail">
                     <i class="fa-solid fa-envelope"></i>
                 </div>
                 <button class="sendMail">SEND MAIL</button>
